--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -2,6 +2,7 @@
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042538.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042562-ttl7dayxlj_encrypt6480087949523534174-320x200.jpg"><p align="center">苹果日报6月24日停运 社论主笔被捕</p></a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042538.md#1" title="苹果日报6月24日停运 社论主笔被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042562-ttl7dayxlj_encrypt6480087949523534174-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041284.md#1" title="苹果日报关门 员工吐露心声 吁同行坚守""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100439102478-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042268.md#1" title="佛州州长签法案：高中生要知共产主义邪恶""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042275-ron-desantis-1200x800-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042235.md#1" title="反对“美国文革” 弗州父母力抗校董会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042644-light_id13042239-ttl7dayYOX_Joe3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042124.md#1" title="武毒所爆丑闻 急删中共军方和国际专家信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13023672-wuhan-lab-700x420-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041887.md#1" title="学生仿革命手段维权 内部文件泄中共恐慌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041895-000_1UR3TM-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041073.md#1" title="抵制北京冬奥会 澳五大城市举办抗议集会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041094-canberra-group-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13040834.md#1" title="香港苹果日报24日停运 告别26年历史""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100107082188-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13040571.md#1" title="依赖中国疫苗的数个国家疫情严峻 警示世界""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032823-GettyImages-1233194236-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040336.md#1" title="普拜会后中共欲联俄抗美 专家：与现实脱节""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13026209-GettyImages-1233484307-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wtyoso3338.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038913.md#1">“工龄归零”逼上绝路 川男社保局割腹自杀</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042288.md#1">【微视频】2021中共维稳 历史上两个异变（下）</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042511.md#1">焦煤告急 价格猛涨 网爆首钢求援函</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041410.md#1">组图：欧盟将为意大利提供1915亿欧元复苏金</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042444.md#1">二战后首次 美F-35B战机从外国航母起降</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042544.md#1">【直播】美议员要求中共对掩盖疫情负责</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042544.md#1">【重播】美议员要求中共对掩盖疫情负责</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038913.md#1">“工龄归零”逼上绝路 川男社保局割腹自杀</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042288.md#1">【微视频】2021中共维稳 历史上两个异变（下）</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042511.md#1">焦煤告急 价格猛涨 网爆首钢求援函</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041410.md#1">组图：欧盟将为意大利提供1915亿欧元复苏金</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042444.md#1">二战后首次 美F-35B战机从外国航母起降</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037328.md#1">董经纬叛逃？章家敦：若属实 中共或一夜变天</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037552.md#1">建党百年陷前所未有困境 中共还能撑多久</a><br>
@@ -29,13 +29,13 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037571.md#1">陆大学生酷热中求装空调 当局严防校园风险</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br>
 <br><p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040410.md#1">杨威：崔天凯自行告别 背后有隐情？</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040115.md#1">【首播】专访程晓农：中共前后30年互相否定</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040173.md#1">【一线采访】佛山上千市民抗议 要求解封</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039778.md#1">【珍言真语】练乙铮：中共本性狂妄令世界反感</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037691.md#1">【探索时分】暗剑无人机吓坏美军？吹15年无影</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038669.md#1">谢金河：特斯拉在中国陷入养套杀死亡螺旋</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038018.md#1">钟原：美抗共转守为攻 疫情追责是关键</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037806.md#1">【时事纵横】七一风声鹤唳 中共发灭门威胁</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036845.md#1">【新闻大家谈】邱香果“消失”引爆加国舆论</a><br>
 <br><p align="center"><a href="https://github.com/wtyoso3338/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041847.md#1">【新闻大家谈】内部暗潮涌？中共发血腥警告</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040410.md#1">杨威：崔天凯自行告别 背后有隐情？</a><br>
@@ -60,7 +60,6 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040258.md#1">周星驰生日怎么过？田启文透露好友新动向</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040043.md#1">家姐当年想当摄影记者 周润发送名贵器材力挺</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040237.md#1">【役情最前线】专家指高官逃美 中共或一夜变天</a><br>
-<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040173.md#1">【一线采访】佛山上千市民抗议 要求解封</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039303.md#1">与武毒所关系密切 达扎克被柳叶刀除名</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037253.md#1">黑龙江女医师王玉卓遭十年冤狱折磨 夫离子散</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039409.md#1">【唐浩视界】美250万疫苗援台 破中共统战三阴谋</a><br>
@@ -69,6 +68,7 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037820.md#1">黄安贬损台湾竞争力排名 反遭大陆网民呛偏激</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037497.md#1">周星驰59岁生日 林允连续6年为老板送祝福</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037806.md#1">【时事纵横】七一风声鹤唳 中共发灭门威胁</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037799.md#1">【远见快评】董经纬传闻VS习宣誓 中纪委恐吓</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037647.md#1">前美官员：应该重金鼓励中共官员投诚</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037499.md#1">【重播】美副防长参加第六届国防科技峰会</a><br>
@@ -78,6 +78,7 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037096.md#1">【微视频】2021中共维稳 异议人士毛左齐抓（上）</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037303.md#1">史上首次 美众议员推法案要求冻结中共资产</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037165.md#1">CGTN编辑爆习访美出状况 编辑室恐慌叫骂</a><br>
+<a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036845.md#1">【新闻大家谈】邱香果“消失”引爆加国舆论</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035007.md#1">法轮功学员及家属遭非法庭审 全程不足5分钟</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035598.md#1">田亮晒照庆父亲节 幽默感谢儿女继承他的美貌</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13034634.md#1">山东胶州 一日至少16法轮功学员遭绑架</a><br>
@@ -93,14 +94,14 @@
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033482.md#1">【时事军事】中共空军J-20 的真面目</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033152.md#1">【财商天下】潘石屹甩卖SOHO 这笔买卖亏吗？</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.167.28.34/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,385</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,385</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
 !共 379,391,625 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041152-S__4939779-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042511.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042532-485e-krwipar2793048-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042511.md#1">焦煤告急 价格猛涨 网爆首钢求援函</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042441.md#1">消息：蚂蚁集团拟交出数据库 跟国企谈合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041313.md#1">民生银行又被罚 今年已被罚逾千万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调中国恒大评级至B 展望为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040055.md#1">中共严打加密货币 比特币跌破3万美元</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042415.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1231796002-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042415.md#1">拜登政府被爆跟中方接触 讨论拜习会</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038913.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039047-page1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038913.md#1">“工龄归零”逼上绝路 川男社保局割腹自杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-847171560-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041152-S__4939779-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042511.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042532-485e-krwipar2793048-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042511.md#1">焦煤告急 价格猛涨 网爆首钢求援函</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042441.md#1">消息：蚂蚁集团拟交出数据库 跟国企谈合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041313.md#1">民生银行又被罚 今年已被罚逾千万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调中国恒大评级至B 展望为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040055.md#1">中共严打加密货币 比特币跌破3万美元</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042415.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-1231796002-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042415.md#1">拜登政府被爆跟中方接触 讨论拜习会</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040336.md#1">普拜会后中共欲联俄抗美 专家：与现实脱节</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038913.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039047-page1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038913.md#1">“工龄归零”逼上绝路 川男社保局割腹自杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
 <a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/1/n12990081.md#1">【独家】维也纳孔子学院成中共渗透桥头堡</a><br>
